[gd_scene load_steps=9 format=3 uid="uid://bdwysurgi6vsh"]

[ext_resource type="PackedScene" path="res://addons/Mushroom/DialogManager/Editor/AddCommnadPopupMenu.tscn" id="1"]
[ext_resource type="Script" path="res://addons/Mushroom/DialogManager/Editor/Scripts/CommandsTree.gd" id="2"]
[ext_resource type="Script" path="res://addons/Mushroom/DialogManager/Editor/Scripts/FlowChartTab.gd" id="3"]
[ext_resource type="Script" path="res://addons/Mushroom/DialogManager/Editor/Scripts/CommandRmbPopup.gd" id="6"]
[ext_resource type="Script" path="res://addons/Mushroom/DialogManager/Editor/Scripts/GraphEdit.gd" id="7"]
[ext_resource type="PackedScene" uid="uid://dr44rkqgqfyrq" path="res://addons/Mushroom/DialogManager/Editor/EnterNameScene.tscn" id="8_mcj0f"]
[ext_resource type="PackedScene" uid="uid://b57ggihn01qk0" path="res://addons/Mushroom/DialogManager/Editor/GraphNode.tscn" id="9_adxui"]

[sub_resource type="GDScript" id="GDScript_2dytf"]
script/source = "@tool
extends MenuButton

var popup := get_popup()


func _ready():
	popup.id_pressed.connect(get_node(\"../../../CommandsTree\")._on_add_command.bind(popup))


func _on_about_to_popup() -> void:
	popup.clear()

	popup.add_item(\"Say\", 0)
	popup.set_item_metadata(0, SayCommand.new())

	popup.add_item(\"Animation\", 1)
	popup.set_item_metadata(1, AnimationCommand.new())

	popup.add_item(\"Fork\", 2)
	popup.set_item_metadata(2, ForkCommand.new())

	popup.add_item(\"Conditional\", 3)
	popup.set_item_metadata(3, ConditionCommand.new())

	popup.add_item(\"Jump\", 4)
	popup.set_item_metadata(4, JumpCommand.new())

	popup.add_item(\"Set Variable\", 5)
	popup.set_item_metadata(5, SetVarCommand.new())

	popup.add_item(\"Play Sound\", 6)
	popup.set_item_metadata(6, SoundCommand.new())

	popup.add_item(\"Change UI\", 7)
	popup.set_item_metadata(7, ChangeUICommand.new())
"

[node name="FlowChartTab" type="HSplitContainer" node_paths=PackedStringArray("graph_edit", "add_block_button", "command_tree", "current_block_name")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("3")
graph_edit = NodePath("GraphContainer/GraphEdit")
add_block_button = NodePath("GraphContainer/GraphHeader/GraphHeaderContainer/AddBlockButton")
command_tree = NodePath("InspectorTabContainer/Block Settings/InspectorVContainer/CommandsTree")
enter_name_scene = ExtResource("8_mcj0f")
current_block_name = NodePath("InspectorTabContainer/Block Settings/InspectorVContainer/TreeHeaderVboxContainer/HBoxContainer/CurrentBlock")

[node name="InspectorTabContainer" type="TabContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Block Settings" type="VSplitContainer" parent="InspectorTabContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2

[node name="InspectorVContainer" type="VBoxContainer" parent="InspectorTabContainer/Block Settings"]
layout_mode = 2

[node name="TreeHeaderVboxContainer" type="VBoxContainer" parent="InspectorTabContainer/Block Settings/InspectorVContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="InspectorTabContainer/Block Settings/InspectorVContainer/TreeHeaderVboxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="InspectorTabContainer/Block Settings/InspectorVContainer/TreeHeaderVboxContainer/HBoxContainer"]
layout_mode = 2
text = "Current Block: "

[node name="CurrentBlock" type="Label" parent="InspectorTabContainer/Block Settings/InspectorVContainer/TreeHeaderVboxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RenameButton" type="Button" parent="InspectorTabContainer/Block Settings/InspectorVContainer/TreeHeaderVboxContainer/HBoxContainer"]
layout_mode = 2
disabled = true
text = "R"

[node name="inspectorHeaderHBoxContainer" type="HBoxContainer" parent="InspectorTabContainer/Block Settings/InspectorVContainer/TreeHeaderVboxContainer"]
layout_mode = 2

[node name="AddCommandMenuButton" type="MenuButton" parent="InspectorTabContainer/Block Settings/InspectorVContainer/TreeHeaderVboxContainer/inspectorHeaderHBoxContainer"]
layout_mode = 2
text = "Add Command"
flat = false
script = SubResource("GDScript_2dytf")

[node name="CommandsTree" type="Tree" parent="InspectorTabContainer/Block Settings/InspectorVContainer" node_paths=PackedStringArray("current_block_label", "commands_settings", "general_rmb_menu", "rename_button")]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
allow_rmb_select = true
hide_root = true
select_mode = 2
script = ExtResource("2")
current_block_label = NodePath("../TreeHeaderVboxContainer/HBoxContainer/CurrentBlock")
commands_settings = NodePath("../../CommandEditorsContianer")
general_rmb_menu = NodePath("GeneralRMBMenu")
rename_button = NodePath("../TreeHeaderVboxContainer/HBoxContainer/RenameButton")

[node name="GeneralRMBMenu" type="PopupMenu" parent="InspectorTabContainer/Block Settings/InspectorVContainer/CommandsTree"]
size = Vector2i(100, 50)
script = ExtResource("6")
i_rmb_add_menu = ExtResource("1")

[node name="CommandEditorsContianer" type="ScrollContainer" parent="InspectorTabContainer/Block Settings"]
layout_mode = 2

[node name="FlowChartSettings" type="PanelContainer" parent="InspectorTabContainer"]
visible = false
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="GraphContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GraphHeader" type="Panel" parent="GraphContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="GraphHeaderContainer" type="HBoxContainer" parent="GraphContainer/GraphHeader"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1.0
alignment = 2

[node name="SaveButton" type="Button" parent="GraphContainer/GraphHeader/GraphHeaderContainer"]
layout_mode = 2
text = "Save"

[node name="Divider" type="Control" parent="GraphContainer/GraphHeader/GraphHeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AddBlockButton" type="Button" parent="GraphContainer/GraphHeader/GraphHeaderContainer"]
layout_mode = 2
text = "Add Block"

[node name="GraphEdit" type="GraphEdit" parent="GraphContainer" node_paths=PackedStringArray("flowchart_tab", "command_tree")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("7")
enter_name_scene = ExtResource("8_mcj0f")
i_graph_node = ExtResource("9_adxui")
flowchart_tab = NodePath("../..")
command_tree = NodePath("../../InspectorTabContainer/Block Settings/InspectorVContainer/CommandsTree")

[connection signal="pressed" from="InspectorTabContainer/Block Settings/InspectorVContainer/TreeHeaderVboxContainer/HBoxContainer/RenameButton" to="." method="_on_rename_button_pressed"]
[connection signal="about_to_popup" from="InspectorTabContainer/Block Settings/InspectorVContainer/TreeHeaderVboxContainer/inspectorHeaderHBoxContainer/AddCommandMenuButton" to="InspectorTabContainer/Block Settings/InspectorVContainer/TreeHeaderVboxContainer/inspectorHeaderHBoxContainer/AddCommandMenuButton" method="_on_about_to_popup"]
[connection signal="item_activated" from="InspectorTabContainer/Block Settings/InspectorVContainer/CommandsTree" to="InspectorTabContainer/Block Settings/InspectorVContainer/CommandsTree" method="_on_tree_item_double_clicked"]
[connection signal="item_mouse_selected" from="InspectorTabContainer/Block Settings/InspectorVContainer/CommandsTree" to="InspectorTabContainer/Block Settings/InspectorVContainer/CommandsTree" method="_on_tree_item_rmb_selected"]
[connection signal="pressed" from="GraphContainer/GraphHeader/GraphHeaderContainer/SaveButton" to="." method="check_flowchart_path_before_save"]
